--- a/build.gradle
+++ b/build.gradle
@@ -1,29 +1,20 @@
 plugins {
-	id 'org.springframework.boot' version '2.1.6.RELEASE'
+	id 'org.springframework.boot' version '2.1.17.RELEASE'
 	id 'io.spring.dependency-management' version '1.0.10.RELEASE'
 	id 'java'
-	id "org.sonarqube" version "2.7"
-    id 'jacoco'
 }
 
-group = 'adn.edwin'
+group = 'adn.edwin.generadorcitasapi'
 version = '0.0.1'
 sourceCompatibility = '1.8'
 
 repositories {
 	mavenCentral()
 }
-apply plugin: 'jacoco'
+
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	runtimeOnly 'com.h2database:h2'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-	testCompile 'junit:junit:4.12'
-	testCompile 'org.mockito:mockito-all:1.10.19'
-	testCompile 'junit:junit:4.12'
-}
-
-test {
-	useJUnitPlatform()
 }
