--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,10 @@ plugins {
 	id 'org.springframework.boot' version '2.1.17.RELEASE'
 	id 'io.spring.dependency-management' version '1.0.10.RELEASE'
 	id 'java'
+	id "org.sonarqube" version "2.7"
 }
+
+apply plugin: 'jacoco'
 
 group = 'adn.edwin.generadorcitasapi'
 version = '0.0.1'
