--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,5 +8,10 @@ spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.platform=h2
 
 # Datasource
-spring.jpa.hibernate.ddl-auto = create
+spring.jpa.hibernate.ddl-auto = create-drop
 spring.datasource.initialize=true
+
+# JPA Configuracion to DROP
+spring.jpa.properties.javax.persistence.schema-generation.database.action=drop-and-create
+spring.jpa.properties.javax.persistence.schema-generation.drop-source=script-then-metadata
+spring.jpa.properties.javax.persistence.schema-generation.drop-script-source=drop-tables.sql
