--- a/build.gradle
+++ b/build.gradle
@@ -3,9 +3,8 @@ plugins {
 	id 'io.spring.dependency-management' version '1.0.10.RELEASE'
 	id 'java'
 	id "org.sonarqube" version "2.7"
+	id 'jacoco'
 }
-
-apply plugin: 'jacoco'
 
 group = 'adn.edwin.generadorcitasapi'
 version = '0.0.1'
@@ -20,4 +19,12 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	runtimeOnly 'com.h2database:h2'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+}
+
+jacocoTestReport {
+	reports {
+		xml.enabled true
+		csv.enabled false
+		html.enabled false
+	}
 }
