--- a/src/test/resources/test-application.properties
+++ b/src/test/resources/test-application.properties
@@ -15,3 +15,6 @@ spring.datasource.initialize=true
 spring.jpa.properties.javax.persistence.schema-generation.database.action=drop-and-create
 spring.jpa.properties.javax.persistence.schema-generation.drop-source=script-then-metadata
 spring.jpa.properties.javax.persistence.schema-generation.drop-script-source=drop-tables.sql
+
+# DATE FORMAT
+spring.jackson.date-format=yyyy-MM-dd
