--- a/src/test/resources/test-application.properties
+++ b/src/test/resources/test-application.properties
@@ -18,3 +18,4 @@ spring.jpa.properties.javax.persistence.schema-generation.drop-script-source=dro
 
 # DATE FORMAT
 spring.jackson.date-format=yyyy-MM-dd
+spring.jackson.time-zone=America/Bogota
